--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
                 </section>
                 <section class="cards">
                         <section class="work-container">
+                            <a href="https://www.youtube.com/watch?v=JDjj5cEqPzI&list=RDJDjj5cEqPzI&start_radio=1"target="_blank">
                             <section>
                                 <img class="img-work" src="./CSS/Imagenes/Placeholder1.jpg" alt="Placeholder">
                                     <section class="capa">
@@ -64,8 +65,10 @@
                                         <p >Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsum voluptas veniam repellat molestias dolor possimus sit nesciunt quis harum beatae. Sequi distinctio amet aperiam. Veritatis perferendis ipsam earum necessitatibus iusto!</p>
                                     </section>
                             </section>
+                            </a>
                         </section>
                         <section class="work-container">
+                            <a href="https://www.youtube.com/watch?v=oozQ4yV__Vw"target="_blank">
                             <section>
                                 <img class="img-work" src="./CSS/Imagenes/Placeholder2.jpg" alt="Placeholder">
                                     <section class="capa">
@@ -73,17 +76,21 @@
                                         <p >Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsum voluptas veniam repellat molestias dolor possimus sit nesciunt quis harum beatae. Sequi distinctio amet aperiam. Veritatis perferendis ipsam earum necessitatibus iusto!</p>
                                     </section>
                             </section>
+                            </a>
                         </section>
                         <section class="work-container">
+                            <a href="https://www.youtube.com/watch?v=dT2owtxkU8k"target="_blank">
                             <section>
-                                <img class="img-work" src="./CSS/Imagenes/Placeholder3.jpg" alt="Placeholder">
+                                <img class="img-work" src="./CSS/Imagenes/Placeholder3.jpg" alt="Placeholder" >
                                     <section class="capa">
                                         <h2 >Trabajo 3</h2>
                                         <p >Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsum voluptas veniam repellat molestias dolor possimus sit nesciunt quis harum beatae. Sequi distinctio amet aperiam. Veritatis perferendis ipsam earum necessitatibus iusto!</p>
                                     </section>
                             </section>
+                            </a>
                         </section>
                         <section class="work-container">
+                            <a href="https://www.youtube.com/watch?v=H4Uincs54xk"target="_blank">
                             <section>
                                 <img class="img-work" src="./CSS/Imagenes/Placeholder4.jpg" alt="Placeholder">
                                     <section class="capa">
@@ -91,8 +98,10 @@
                                         <p >Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsum voluptas veniam repellat molestias dolor possimus sit nesciunt quis harum beatae. Sequi distinctio amet aperiam. Veritatis perferendis ipsam earum necessitatibus iusto!</p>
                                     </section>
                             </section>
+                            </a>
                         </section>
                         <section class="work-container">
+                            <a href="https://www.youtube.com/watch?v=SR6iYWJxHqs"target="_blank">
                             <section>
                                 <img class="img-work" src="./CSS/Imagenes/Placeholder5.jpg" alt="Placeholder">
                                     <section class="capa">
@@ -100,8 +109,10 @@
                                         <p >Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsum voluptas veniam repellat molestias dolor possimus sit nesciunt quis harum beatae. Sequi distinctio amet aperiam. Veritatis perferendis ipsam earum necessitatibus iusto!</p>
                                     </section>
                             </section>
+                            </a>
                         </section>
                         <section class="work-container">
+                            <a href="https://www.youtube.com/watch?v=uWRlisQu4fo"target="_blank">
                             <section>
                                 <img class="img-work" src="./CSS/Imagenes/Placeholder6.jpg" alt="Placeholder">
                                     <section class="capa">
@@ -109,6 +120,7 @@
                                         <p >Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsum voluptas veniam repellat molestias dolor possimus sit nesciunt quis harum beatae. Sequi distinctio amet aperiam. Veritatis perferendis ipsam earum necessitatibus iusto!</p>
                                     </section>
                             </section>
+                            </a>
                         </section>                
                     </section>
                 <!--Contenido Contact me-->
