Se agrego proyecto1

--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
                 </section>
                 <section class="cards">
                         <section class="work-container">
-                            <a href="https://www.youtube.com/watch?v=JDjj5cEqPzI&list=RDJDjj5cEqPzI&start_radio=1"target="_blank">
+                            <a href="https://caro2102.github.io/Hermes-Logistics/"target="_blank">
                             <section>
-                                <img class="img-work" src="./CSS/Imagenes/Placeholder1.jpg" alt="Placeholder">
+                                <img class="img-work" src="./CSS/Imagenes/hermesL.png" alt="Placeholder">
                                     <section class="capa">
                                         <h2 >Trabajo 1</h2>
-                                        <p >Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsum voluptas veniam repellat molestias dolor possimus sit nesciunt quis harum beatae. Sequi distinctio amet aperiam. Veritatis perferendis ipsam earum necessitatibus iusto!</p>
+                                        <p >Hermes Logistics Versión 1.01 consiste en llevar a cabo la administración de tu equipo de trabajo en la rama del transporte.</p>
                                     </section>
                             </section>
                             </a>
