Se agrego order manager a trabajo 2

--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
                             </a>
                         </section>
                         <section class="work-container">
-                            <a href="https://www.youtube.com/watch?v=oozQ4yV__Vw"target="_blank">
+                            <a href="https://order-manager-application.herokuapp.com/"target="_blank">
                             <section>
-                                <img class="img-work" src="./CSS/Imagenes/Placeholder2.jpg" alt="Placeholder">
+                                <img class="img-work" src="./CSS/Imagenes/orderManager.png" alt="Placeholder">
                                     <section class="capa">
                                         <h2 >Trabajo 2</h2>
-                                        <p >Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsum voluptas veniam repellat molestias dolor possimus sit nesciunt quis harum beatae. Sequi distinctio amet aperiam. Veritatis perferendis ipsam earum necessitatibus iusto!</p>
+                                        <p >Es una aplicación de gestión de órdenes de venta de materiales, que permite registrar, supervisar y gestionar las órdenes llevando un control administrativo de todo el proceso de venta.</p>
                                     </section>
                             </section>
                             </a>
